--- a/views/sale_report_saleorder_document_template.xml
+++ b/views/sale_report_saleorder_document_template.xml
@@ -1,85 +1,195 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-        <template id="sale.report_saleorder_document_inherit" inherit_id="sale.report_saleorder_document">
-            <xpath expr="//h2" position="replace"/>
-            <xpath expr="//div[@class='page']//div[1]" position="after">
-                <h2>
-                    <t t-if="not (env.context.get('proforma', False) or is_pro_forma)">
-                        <span t-if="doc.state not in ['draft','sent']">Order # </span>
-                        <span t-if="doc.state in ['draft','sent']">Quotation # </span>
-                    </t>
-                    <t t-if="env.context.get('proforma', False) or is_pro_forma">
-                        <span>Pro-Forma Invoice # </span>
-                    </t>
-                    <span t-field="doc.name"/>
-                </h2>
-            </xpath>
-            <xpath expr="//table[@class='table table-condensed']//thead" position="replace">
-                <tr>
-                    <th>No.</th>
-                    <th>Tag No.</th>
-                    <th>Description</th>
-                    <th class="text-right">Quantity</th>
-                    <th class="text-right">Unit Price</th>
-                    <th class="text-right" groups="sale.group_show_price_subtotal">Amount</th>
-                    <th class="text-right price_tax_included" groups="sale.group_show_price_total">Total Price</th>
-                </tr>
-            </xpath>
-            <xpath expr="//tbody[@class='sale_tbody']" position="replace">
-                <t t-foreach="page" t-as="layout_category">
-
-                    <t t-if="layout_category_size &gt; 1 or page_size &gt; 1" groups="sale.group_sale_layout">
-                        <tr class="active">
-                            <td colspan="6" style="font-weight: bold; border-bottom: 1px solid black;">&amp;bull;
-                                <t t-esc="layout_category['name']"/>
-                            </td>
-                        </tr>
-                    </t>
-
-                   <!-- Lines associated -->
-                    <t t-foreach="layout_category['lines']" t-as="l">
-                        <tr>
-                            <td>
-                                <span t-field="l.x_line_no"/>
-                            </td>
-                            <td>
-                                <span t-field="l.x_tag_no"/>
-                            </td>
-                            <td>
-                                <span t-field="l.name"/>
-                                <t t-if="l.x_notes">
-                                    <br />
-                                    <span>-----------------</span><br />
-                                    <span t-field="l.x_notes"/>
-                                </t>
-                            </td>
-                            <td class="text-right">
-                                <span t-field="l.product_uom_qty"/>
-                                <span t-field="l.product_uom" groups="product.group_uom"/>
-                            </td>
-                            <td class="text-right">
-                                <span t-field="l.x_price_unit"/>
-                            </td>
-                            <td class="text-right" groups="sale.group_show_price_subtotal">
-                                <span t-field="l.price_subtotal" t-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: doc.pricelist_id.currency_id}"/>
-                            </td>
-                            <td class="text-right" groups="sale.group_show_price_total">
-                                <span t-field="l.price_total" t-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: doc.pricelist_id.currency_id}"/>
-                            </td>
-                        </tr>
-                    </t>
-
-                    <t t-if="(layout_category_size &gt; 1 or page_size &gt; 1) and layout_category['subtotal']" groups="sale.group_sale_layout">
-                        <tr class="text-right">
-                            <td colspan="5">
-                                <strong>Subtotal: </strong>
-                                <t t-set="subtotal" t-value="sum(line.price_subtotal for line in layout_category['lines'])"/>
-                                <span t-esc="subtotal" t-options="{'widget': 'monetary', 'display_currency': doc.pricelist_id.currency_id}"/>
-                            </td>
-                        </tr>
-                    </t>
-
+    <template id="sale.report_saleorder_document_inherit" inherit_id="sale.report_saleorder_document">
+        <xpath expr="//div[@class='page']" position="attributes">
+            <attribute name="style">font-family: Arimo; font-size: 11px;</attribute>
+        </xpath>
+        
+        <xpath expr="//h2" position="replace"/>
+        
+        <xpath expr="//div[@class='page']//div[1]" position="before">
+            <h2>
+                <t t-if="not (env.context.get('proforma', False) or is_pro_forma)">
+                    <span t-if="doc.state not in ['draft','sent']">Order # </span>
+                    <span t-if="doc.state in ['draft','sent']">Quotation # </span>
                 </t>
-            </xpath>
-        </template>
+                <t t-if="env.context.get('proforma', False) or is_pro_forma">
+                    <span>Pro-Forma Invoice # </span>
+                </t>
+                <span t-field="doc.name"/>
+            </h2>
+        </xpath>
+        
+        <xpath expr="//div[@class='page']//div[2]" position="replace">
+            <div class="col-xs-4">
+                <t t-if="doc.state in ['draft','sent']">
+                    <strong>Customer:</strong>
+                    <div t-field="doc.partner_id" t-options="{&quot;widget&quot;: &quot;contact&quot;, &quot;fields&quot;: [&quot;address&quot;, &quot;name&quot;, &quot;phone&quot;, &quot;email&quot;], &quot;no_marker&quot;: True, &quot;phone_icons&quot;: True}"/>
+                </t>
+                <t t-if="doc.state not in ['draft','sent']">
+                    <t t-if="doc.partner_shipping_id == doc.partner_invoice_id                              and doc.partner_invoice_id != doc.partner_id                              or doc.partner_shipping_id != doc.partner_invoice_id">
+                        <strong t-if="doc.partner_shipping_id == doc.partner_invoice_id">Invoicing and Shipping Address:</strong>
+                        <strong t-if="doc.partner_shipping_id != doc.partner_invoice_id">Invoicing Address:</strong>
+                        <div t-field="doc.partner_invoice_id" t-options="{&quot;widget&quot;: &quot;contact&quot;, &quot;fields&quot;: [&quot;address&quot;, &quot;name&quot;, &quot;phone&quot;], &quot;no_marker&quot;: True, &quot;phone_icons&quot;: True}"/>
+                    </t>
+                </t>
+            </div>
+            <div class="col-xs-4">
+                <t t-if="doc.partner_shipping_id == doc.partner_invoice_id                              and doc.partner_invoice_id != doc.partner_id                              or doc.partner_shipping_id != doc.partner_invoice_id">
+                    <div t-if="doc.partner_shipping_id != doc.partner_invoice_id">
+                        <strong>Shipping Address:</strong>
+                        <div t-field="doc.partner_shipping_id" t-options="{&quot;widget&quot;: &quot;contact&quot;, &quot;fields&quot;: [&quot;address&quot;, &quot;name&quot;, &quot;phone&quot;], &quot;no_marker&quot;: True, &quot;phone_icons&quot;: True}"/>
+                    </div>
+                </t>
+            </div>
+            <div class="col-xs-4">
+                <div class="row">
+                    <div class="col-xs-5 text-right">
+                        <strong>Your Contact:</strong>
+                    </div>
+                    <div class="col-xs-7">
+                        <div t-field="doc.user_id" t-options="{                           &quot;widget&quot;: &quot;contact&quot;,                           &quot;fields&quot;: [&quot;name&quot;, &quot;phone&quot;, &quot;email&quot;]                           }"/>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-5 text-right">
+                        <strong>Quote Date:</strong>
+                    </div>
+                    <div class="col-xs-7">
+                        <span t-field="doc.date_order"/>
+                    </div>
+                </div>
+                <t t-if="old_revision_ids">
+                    <div class="row">
+                        <div class="col-xs-5 text-right">
+                            <strong>Last Revision:</strong>
+                        </div>
+                        <div class="col-xs-7">
+                            <span t-field="doc.old_revision_ids.create_date"/>
+                        </div>
+                    </div>
+                </t>
+                <div class="row">
+                    <div class="col-xs-5 text-right">
+                        <strong>Expiration Date:</strong>
+                    </div>
+                    <div class="col-xs-7">
+                        <span t-field="doc.validity_date"/>
+                    </div>
+                </div>
+                <div t-if="doc.client_order_ref" class="row">
+                    <div class="col-xs-5 text-right">
+                        <strong>Your Reference:</strong>
+                    </div>
+                    <div class="col-xs-7">
+                        <span t-field="doc.client_order_ref"/>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-5 text-right">
+                        <strong>Incoterms:</strong>
+                    </div>
+                    <div class="col-xs-7">
+                        <span t-field="doc.incoterm.code"/>
+                        <span t-field="doc.ports_id"/>
+                    </div>
+                </div>
+                <t t-if="doc.carrier_id">
+                    <div class="row">
+                        <div class="col-xs-5 text-right">
+                            <strong>Delivery Method:</strong>
+                        </div>
+                        <div class="col-xs-7">
+                            <span t-field="doc.carrier_id"/>
+                        </div>
+                    </div>
+                </t>
+                <div class="row">
+                    <div class="col-xs-5 text-right">
+                        <strong>Lead Time:</strong>
+                    </div>
+                    <div class="col-xs-7">
+                        <span t-field="doc.lead_time"/> days
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-5 text-right">
+                        <strong>Payment Terms:</strong>
+                    </div>
+                    <div class="col-xs-7">
+                        <span t-field="doc.payment_term_id"/>
+                    </div>
+                </div>
+            </div>
+            <div class="clearfix"/>
+        </xpath>
+        
+        <xpath expr="//div[@id='informations']" position="replace"/>
+
+        <xpath expr="//table[@class='table table-condensed']//thead" position="replace">
+            <tr>
+                <th>No.</th>
+                <th>Description</th>
+                <th class="text-right">Quantity</th>
+                <th class="text-right">Unit Price</th>
+                <th class="text-right" groups="sale.group_show_price_subtotal">Amount</th>
+                <th class="text-right price_tax_included" groups="sale.group_show_price_total">Total Price</th>
+            </tr>
+        </xpath>
+        
+        <xpath expr="//tbody[@class='sale_tbody']" position="replace">
+            <t t-foreach="page" t-as="layout_category">
+                <t t-if="layout_category_size &gt; 1 or page_size &gt; 1" groups="sale.group_sale_layout">
+                    <tr class="active">
+                        <td colspan="6" style="font-weight: bold; border-bottom: 1px solid black;">&amp;bull;
+                            <t t-esc="layout_category['name']"/>
+                        </td>
+                    </tr>
+                </t>
+
+                <!-- Lines associated -->
+                <t t-foreach="layout_category['lines']" t-as="l">
+                    <tr>
+                        <td>
+                            <span t-field="l.x_line_no"/>
+                        </td>
+                        <td>
+                            <t t-if="l.x_tag_no"><span t-field="l.x_tag_no"/><br /></t>
+                            <span t-field="l.name"/>
+                            <t t-if="l.x_notes">
+                                <br />
+                                <span>-----------------</span><br />
+                                <span t-field="l.x_notes"/>
+                            </t>
+                        </td>
+                        <td class="text-right">
+                            <span t-field="l.product_uom_qty"/>
+                            <span t-field="l.product_uom" groups="product.group_uom"/>
+                        </td>
+                        <td class="text-right">
+                            <span t-field="l.x_price_unit"/>
+                        </td>
+                        <td class="text-right" groups="sale.group_show_price_subtotal">
+                            <span t-field="l.price_subtotal" t-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: doc.pricelist_id.currency_id}"/>
+                        </td>
+                        <td class="text-right" groups="sale.group_show_price_total">
+                            <span t-field="l.price_total" t-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: doc.pricelist_id.currency_id}"/>
+                        </td>
+                    </tr>
+                </t>
+
+                <t t-if="(layout_category_size &gt; 1 or page_size &gt; 1) and layout_category['subtotal']" groups="sale.group_sale_layout">
+                    <tr class="text-right">
+                        <td colspan="5">
+                            <strong>Subtotal: </strong>
+                            <t t-set="subtotal" t-value="sum(line.price_subtotal for line in layout_category['lines'])"/>
+                            <span t-esc="subtotal" t-options="{'widget': 'monetary', 'display_currency': doc.pricelist_id.currency_id}"/>
+                        </td>
+                    </tr>
+                </t>
+            </t>
+        </xpath>
+        
+        <xpath expr="//p[@t-if='doc.payment_term_id.note']" position="replace"/>
+    </template>
 </odoo>
