--- a/views/website_quote.xml
+++ b/views/website_quote.xml
@@ -40,13 +40,13 @@
 						<div class="clearfix"/>
 							<label class="col-sm-5 col-xs-5 text-right">Incoterms:</label>
 						<div class="col-sm-7 col-xs-7">
-							<span t-field="quotation.incoterm.code"/>&amp;nbsp;
+							<span t-field="quotation.incoterm.code"/><![CDATA[&nbsp;]]>
 							<span t-field="quotation.ports_id"/>
 						</div>
 						<div class="clearfix"/>
 						<label class="col-sm-5 col-xs-5 text-right">Lead Time:</label>
 						<div class="col-sm-7 col-xs-7">
-							<span t-field="quotation.lead_time"/>&amp;nbsp;days</span>
+							<span t-field="quotation.lead_time"/><![CDATA[&nbsp;]]>days
 						</div>
 						<div class="clearfix"/>
 						<div t-if="quotation.payment_term_id">
@@ -58,6 +58,7 @@
 					</div>
 				</div>
 			</xpath>
+			
 			<xpath expr="//t[@name='Quotation Content']//div[2]/div[1]" position="replace">
 				<div class="col-md-6 col-xs-6">
 					<div class="row">
@@ -83,6 +84,16 @@
 					</div>
 				</div>
 			</xpath>
+		</template>
+		
+		<template id="report_quote_inherit" inherit_id="website_quote.report_quote">
+			<xpath expr="//div[@class='page']" position="attributes">
+				<attribute name="style">font-family: Arimo;</attribute>
+			</xpath>
+		</template>
+		
+		<template id="Product Quotation Inherit" inherit_id="website_quote.so_quotation">
+			<xpath expr="//strong[@style='text-decoration: line-through']" position="replace"/>
 		</template>
 	</data>
 </odoo>
