--- a/views/sale_order_template.xml
+++ b/views/sale_order_template.xml
@@ -18,7 +18,7 @@
 					</div>
 					<label for="incoterm"/>
 					<div>
-						<field name="incoterm" string="Incoterms" class="oe_inline"/>
+						<field name="incoterm" string="Incoterms" class="oe_inline"/><![CDATA[&nbsp;]]>
 						<field name="ports_id" string="Incoterms Port" class="oe_inline"/>
 					</div>
 				</xpath>
