--- a/views/sale_report_saleorder_document_template.xml
+++ b/views/sale_report_saleorder_document_template.xml
@@ -89,7 +89,7 @@
                     </div>
                     <div class="col-xs-7">
                         <span t-field="doc.incoterm.code"/>
-                        <span t-field="doc.ports_id"/>
+                        <span t-field="doc.delivery_points_id"/>
                     </div>
                 </div>
                 <t t-if="doc.carrier_id">
