--- a/views/sale_report_saleorder_document_template.xml
+++ b/views/sale_report_saleorder_document_template.xml
@@ -126,7 +126,8 @@
             <tr>
                 <th>No.</th>
                 <th>Description</th>
-                <th class="text-right">Quantity</th>
+                <th class="text-right">Qty</th>
+                <th>UoM</th>
                 <th class="text-right">Unit Price</th>
                 <th class="text-right" groups="sale.group_show_price_subtotal">Amount</th>
                 <th class="text-right price_tax_included" groups="sale.group_show_price_total">Total Price</th>
@@ -136,7 +137,7 @@
             <t t-foreach="page" t-as="layout_category">
                 <t t-if="layout_category_size &gt; 1 or page_size &gt; 1" groups="sale.group_sale_layout">
                     <tr class="active">
-                        <td colspan="6" style="font-weight: bold; border-bottom: 1px solid black;">&amp;bull;
+                        <td colspan="7" style="font-weight: bold; border-bottom: 1px solid black;">&amp;bull;
                             <t t-esc="layout_category['name']"/>
                         </td>
                     </tr>
@@ -159,6 +160,8 @@
                         </td>
                         <td class="text-right">
                             <span t-field="l.product_uom_qty"/>
+                        </td>
+                        <td>
                             <span t-field="l.product_uom" groups="product.group_uom"/>
                         </td>
                         <td class="text-right">
@@ -175,7 +178,7 @@
 
                 <t t-if="(layout_category_size &gt; 1 or page_size &gt; 1) and layout_category['subtotal']" groups="sale.group_sale_layout">
                     <tr class="text-right">
-                        <td colspan="5">
+                        <td colspan="6">
                             <strong>Subtotal: </strong>
                             <t t-set="subtotal" t-value="sum(line.price_subtotal for line in layout_category['lines'])"/>
                             <span t-esc="subtotal" t-options="{'widget': 'monetary', 'display_currency': doc.pricelist_id.currency_id}"/>
