--- a/views/website_quote_pricing.xml
+++ b/views/website_quote_pricing.xml
@@ -32,7 +32,8 @@
 								<t t-if="line.x_tag_no">
 									<span>Tag No.: </span><span t-field="line.x_tag_no"/><br />
 								</t>
-								<span t-field="line.name"/>
+								<span class="hidden-xs" t-field="line.default_code"/>
+								<span class="visible-xs-inline" t-field="line.name"/>
 								<t t-if="line.x_notes">
 									<br /><span>--------</span><br/>
 									<span t-field="line.x_notes"/>
