--- a/views/sale_order_template.xml
+++ b/views/sale_order_template.xml
@@ -21,6 +21,50 @@
 						<field name="delivery_points" string="Delivery Point" class="oe_inline"/>
 					</div>
 				</xpath>
+				<xpath expr="//div[@class='oe_clear']" position="after">
+					<div class="o_setting_left_pane">
+						<field name="use_payment_note"/>
+					</div>
+					<div class="o_setting_right_pane">
+						<label for="use_payment_note"/>
+						<div class="text-muted">
+							Show notes to payment terms on orders
+						</div>
+						<div class="content-group" attrs="{'invisible': [('use_payment_note','=',False)]}">
+							<div class="mt16">
+								<field name="payment_note" placeholder="Insert your notes here..."/>
+							</div>
+						</div>
+					</div>
+					<div class="o_setting_left_pane">
+						<field name="use_incoterms_note"/>
+					</div>
+					<div class="o_setting_right_pane">
+						<label for="use_incoterms_note"/>
+						<div class="text-muted">
+							Show notes to incoterm on orders
+						</div>
+						<div class="content-group" attrs="{'invisible': [('use_incoterms_note','=',False)]}">
+							<div class="mt16">
+								<field name="incoterms_note" placeholder="Insert your notes here..."/>
+							</div>
+						</div>
+					</div>
+					<div class="o_setting_left_pane">
+						<field name="use_leadtime_note"/>
+					</div>
+					<div class="o_setting_right_pane">
+						<label for="use_leadtime_note"/>
+						<div class="text-muted">
+							Show notes to payment terms on orders
+						</div>
+						<div class="content-group" attrs="{'invisible': [('use_leadtime_note','=',False)]}">
+							<div class="mt16">
+								<field name="leadtime_note" placeholder="Insert your notes here..."/>
+							</div>
+						</div>
+					</div>
+				</xpath>
 			</field>
 		</record>
 	</data>
