Add note section

--- a/views/website_quote_pricing.xml
+++ b/views/website_quote_pricing.xml
@@ -108,6 +108,20 @@
 					</tr>
 				</t>
 			</xpath>
+			<xpath expr="//section[@id='terms']" position="before">
+				<section id="notes" class="container" t-if="quotation.use_payment_note or quotation.use_leadtime_note or quotation.use_incoterms_note">
+					<h2 class="page-header">Notes</h2>
+					<t t-if="quotation.use_payment_note">
+						<span>* </span><p t-field="quotation.payment_note"/>
+					</t>
+					<t t-if="quotation.use_leadtime_note">
+						<span>* </span><p t-field="quotation.leadtime_note"/>
+					</t>
+					<t t-if="quotation.use_incoterms_note">
+						<span>* </span><p t-field="quotation.incoterms_note"/>
+					</t>
+				</section>
+			</xpath>
 		</template>
 	</data>
 </odoo>
