--- a/views/website_quote_pricing.xml
+++ b/views/website_quote_pricing.xml
@@ -112,13 +112,13 @@
 				<section id="notes" class="container" t-if="quotation.use_payment_note or quotation.use_leadtime_note or quotation.use_incoterms_note">
 					<h2 class="page-header">Notes</h2>
 					<t t-if="quotation.use_payment_note">
-						<span>* </span><span t-field="quotation.payment_note"/>
+						<p><span>* </span><span t-field="quotation.payment_note"/></p>
 					</t>
 					<t t-if="quotation.use_leadtime_note">
-						<span>* </span><span t-field="quotation.leadtime_note"/>
+						<p><span>* </span><span t-field="quotation.leadtime_note"/></p>
 					</t>
 					<t t-if="quotation.use_incoterms_note">
-						<span>* </span><span t-field="quotation.incoterms_note"/>
+						<p><span>* </span><span t-field="quotation.incoterms_note"/></p>
 					</t>
 				</section>
 			</xpath>
