--- a/views/website_quote_pricing.xml
+++ b/views/website_quote_pricing.xml
@@ -110,7 +110,7 @@
 			</xpath>
 			<xpath expr="//section[@id='terms']" position="before">
 				<section id="notes" class="container" t-if="quotation.use_payment_note or quotation.use_leadtime_note or quotation.use_incoterms_note">
-					<h2 class="page-header">Notes</h2>
+					<h2 class="page-header">Remarks</h2>
 					<t t-if="quotation.use_payment_note">
 						<p><span>* </span><span t-field="quotation.payment_note"/></p>
 					</t>
