--- a/views/sale_order_template.xml
+++ b/views/sale_order_template.xml
@@ -72,6 +72,22 @@
 								</div>
 							</div>
 						</div>
+						<div class="col-xs-12 col-md-6 o_setting_box">
+							<div class="o_setting_left_pane">
+								<field name="use_other_note"/>
+							</div>
+							<div class="o_setting_right_pane">
+								<label for="use_other_note"/>
+								<div class="text-muted">
+									Show notes to other note on orders
+								</div>
+								<div class="content-group" attrs="{'invisible': [('use_other_note','=',False)]}">
+									<div class="mt16">
+										<field name="other_note" placeholder="Insert your notes here..."/>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</xpath>
 			</field>
