--- a/views/sale_order_template.xml
+++ b/views/sale_order_template.xml
@@ -13,19 +13,19 @@
 				<xpath expr="//field[@name='payment_term_id']" position="after">
 					<label for="lead_time"/>
 					<div>
-						<field name="lead_time" string="Lead Time" class="oe_inline"/> days
+						<field name="lead_time" string="Lead Time" class="oe_inline" attrs="{'readonly':[('state', '=', 'sent')]}"/> days
 					</div>
 					<label for="incoterm"/>
 					<div>
-						<field name="incoterm" string="Incoterms" class="oe_inline"/><![CDATA[&nbsp;]]>
-						<field name="delivery_points" string="Delivery Point" class="oe_inline"/>
+						<field name="incoterm" string="Incoterms" class="oe_inline" attrs="{'readonly':[('state', '=', 'sent')]}"/><![CDATA[&nbsp;]]>
+						<field name="delivery_points" string="Delivery Point" class="oe_inline" attrs="{'readonly':[('state', '=', 'sent')]}"/>
 					</div>
 				</xpath>
 				<xpath expr="//field[@name='note']" position="after">
 					<div class="row mt16 o_settings_container">
 						<div class="col-xs-12 col-md-6 o_setting_box">
 							<div class="o_setting_left_pane">
-								<field name="use_payment_note"/>
+								<field name="use_payment_note" attrs="{'readonly':[('state', '=', 'sent')]}"/>
 							</div>
 							<div class="o_setting_right_pane">
 								<label for="use_payment_note"/>
@@ -34,7 +34,7 @@
 								</div>
 								<div class="content-group" attrs="{'invisible': [('use_payment_note','=',False)]}">
 									<div class="mt16">
-										<field name="payment_note" placeholder="Insert your notes here..."/>
+										<field name="payment_note" placeholder="Insert your notes here..." attrs="{'readonly':[('state', '=', 'sent')]}"/>
 									</div>
 								</div>
 							</div>
@@ -42,23 +42,23 @@
 					
 						<div class="col-xs-12 col-md-6 o_setting_box">
 							<div class="o_setting_left_pane">
-								<field name="use_incoterms_note"/>
+								<field name="use_incoterms_note" attrs="{'readonly':[('state', '=', 'sent')]}"/>
 							</div>
 							<div class="o_setting_right_pane">
-								<label for="use_incoterms_note"/>
+								<label for="use_incoterms_note" attrs="{'readonly':[('state', '=', 'sent')]}"/>
 								<div class="text-muted">
 									Show notes to incoterms on orders
 								</div>
 								<div class="content-group" attrs="{'invisible': [('use_incoterms_note','=',False)]}">
 									<div class="mt16">
-										<field name="incoterms_note" placeholder="Insert your notes here..."/>
+										<field name="incoterms_note" placeholder="Insert your notes here..." attrs="{'readonly':[('state', '=', 'sent')]}"/>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="col-xs-12 col-md-6 o_setting_box">
 							<div class="o_setting_left_pane">
-								<field name="use_leadtime_note"/>
+								<field name="use_leadtime_note" attrs="{'readonly':[('state', '=', 'sent')]}"/>
 							</div>
 							<div class="o_setting_right_pane">
 								<label for="use_leadtime_note"/>
@@ -67,14 +67,14 @@
 								</div>
 								<div class="content-group" attrs="{'invisible': [('use_leadtime_note','=',False)]}">
 									<div class="mt16">
-										<field name="leadtime_note" placeholder="Insert your notes here..."/>
+										<field name="leadtime_note" placeholder="Insert your notes here..." attrs="{'readonly':[('state', '=', 'sent')]}"/>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="col-xs-12 col-md-6 o_setting_box">
 							<div class="o_setting_left_pane">
-								<field name="use_other_note"/>
+								<field name="use_other_note" attrs="{'readonly':[('state', '=', 'sent')]}"/>
 							</div>
 							<div class="o_setting_right_pane">
 								<label for="use_other_note"/>
@@ -83,7 +83,7 @@
 								</div>
 								<div class="content-group" attrs="{'invisible': [('use_other_note','=',False)]}">
 									<div class="mt16">
-										<field name="other_note" placeholder="Insert your notes here..."/>
+										<field name="other_note" placeholder="Insert your notes here..." attrs="{'readonly':[('state', '=', 'sent')]}"/>
 									</div>
 								</div>
 							</div>
