--- a/views/sale_order_template.xml
+++ b/views/sale_order_template.xml
@@ -21,7 +21,7 @@
 						<field name="delivery_points" string="Delivery Point" class="oe_inline" attrs="{'readonly':[('state', '=', 'sent')]}"/>
 					</div>
 				</xpath>
-				<xpath expr="//field[@name='note']" position="after">
+				<xpath expr="//field[@name='note']" position="before">
 					<div class="row mt16 o_settings_container">
 						<div class="col-xs-12 col-md-6 o_setting_box">
 							<div class="o_setting_left_pane">
