--- a/views/sale_order_template.xml
+++ b/views/sale_order_template.xml
@@ -90,7 +90,7 @@
 						</div>
 					</div>
 				</xpath>
-				<xpath expr="" position="replace">
+				<xpath expr="//field[@name='note']" position="replace">
 					<field name="note" placeholder="Setup default terms and conditions in your sales settings ..."/>
 				</xpath>
 			</field>
