--- a/views/sale_order_template.xml
+++ b/views/sale_order_template.xml
@@ -91,6 +91,7 @@
 					</div>
 				</xpath>
 				<xpath expr="//field[@name='note']" position="replace">
+					<h2><label for="note" string="Terms & Conditions"/></h2>
 					<field name="note" placeholder="Setup default terms and conditions in your sales settings ..."/>
 				</xpath>
 			</field>
